// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KAlert Renders danger variant 1`] = `
<div role="alert" class="k-alert danger none" message="I am danger">
  <!---->
  <!---->
  <div class="k-alert-msg-text">
    <!---->
    <div class="k-alert-msg">

    </div>
    <!---->
  </div>
  <!---->
  <!---->
</div>
`;

exports[`KAlert Renders info variant 1`] = `
<div role="alert" class="k-alert info none" message="I am info">
  <!---->
  <!---->
  <div class="k-alert-msg-text">
    <!---->
    <div class="k-alert-msg">

    </div>
    <!---->
  </div>
  <!---->
  <!---->
</div>
`;

exports[`KAlert Renders success variant 1`] = `
<div role="alert" class="k-alert success none" message="I am success">
  <!---->
  <!---->
  <div class="k-alert-msg-text">
    <!---->
    <div class="k-alert-msg">

    </div>
    <!---->
  </div>
  <!---->
  <!---->
</div>
`;

exports[`KAlert Renders warning variant 1`] = `
<div role="alert" class="k-alert warning none" message="I am warning">
  <!---->
  <!---->
  <div class="k-alert-msg-text">
    <!---->
    <div class="k-alert-msg">

    </div>
    <!---->
  </div>
  <!---->
  <!---->
</div>
`;

exports[`KAlert renders slots when passed 1`] = `
<div role="alert" class="k-alert info large button is-banner" hasactionbuttons="true">
  <!---->
  <!---->
  <div class="k-alert-msg-text">
    <!---->
    <div class="k-alert-msg k-alert-text"><span>Hello World</span></div>
    <div class="k-alert-description-text"><span>I am an alert</span></div>
  </div>
  <!---->
  <div class="k-alert-action info"><span>Action button</span> <button type="button" class="k-button small rounded outline">
      <!---->
      Dismiss
      <!----></button></div>
</div>
`;
